--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,8 @@ button {
 }
 
 .header-logo {
-  margin-right: auto;
   flex-shrink: 0;
+  margin-right: auto;
 }
 
 .header-nav {
@@ -120,12 +120,13 @@ button {
 
 .btn {
   padding: 15px 35px;
+  border-radius: 3px;
   font-weight: 600;
   font-size: 15px;
+  line-height: 20px;
   text-transform: uppercase;
   color: #fff;
   background-color: #3172B9;
-  border-radius: 3px;
 }
 
 .header-btn {
@@ -144,10 +145,10 @@ button {
 }
 
 .hero-content {
-  max-width: 50%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  max-width: 50%;
 }
 
 .hero-heading {
@@ -213,6 +214,7 @@ button {
 /* Services */
 
 .services-heading {
+  margin-bottom: 20px;
   text-align: center;
 }
 
@@ -411,6 +413,115 @@ button {
   color: #787878;
 }
 
+/* Join us */
+
+.join-us {
+  padding-bottom: 120px;
+}
+
+.join-us-heading {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.join-us-desc {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.join-us-form {
+  padding: 0 55px;
+}
+
+.join-us-form-fieldset {
+  display: flex;
+  gap: 20px;
+  margin: 0 0 20px 0;
+  padding: 0;
+  border: 0;
+}
+
+.join-us-form-caption {
+  display: none;
+}
+
+.join-us-form-client-info {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 50%;
+}
+
+.join-us-form-input {
+  padding: 15px 28px;
+  border: 1px solid #DADADA;
+  border-radius: 50px;
+  width: 250px;
+  font-size: 16px;
+  line-height: 180%;
+  color: #787878;
+}
+
+.join-us-form-select {
+  padding: 15px 28px;
+  border: 1px solid #DADADA;
+  border-radius: 50px;
+  width: 250px;
+  font-size: 16px;
+  line-height: 180%;
+  color: #787878;
+}
+
+.join-us-form-comment {
+  width: 50%;
+}
+
+.join-us-form-textarea {
+  padding: 15px 28px;
+  border: 1px solid #DADADA;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  line-height: 180%;
+  color: #787878;
+}
+
+.join-us-form-btn-block {
+  display: flex;
+  justify-content: end;
+}
+
+.join-us-form-btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.join-us-form-btn {
+  padding: 20px 67px;
+  margin-bottom: 10px;
+  min-width: 230px;
+  border-radius: 50px;
+}
+
+.join-us-form-checkbox {
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  line-height: 16px;
+  color: #787878;
+}
+
+.join-us-form-checkbox input {
+  margin-right: 8px;
+}
+
+.join-us-form-checkbox a {
+  border-bottom: 1px solid #3172B9;
+  color: #3172B9;
+}
+
 /* Footer */
 
 .footer {
@@ -430,8 +541,8 @@ button {
 }
 
 .footer-logo {
-  margin-right: 25px;
   flex-shrink: 0;
+  margin-right: 25px;
 }
 
 .footer-copyright {
